edits to text and updated R code for wiki

--- a/Do Natural History Docuementaries Prompt Public Engagement.tex
+++ b/Do Natural History Docuementaries Prompt Public Engagement.tex
@@ -127,7 +127,6 @@ We live in the Anthropocene, one of the most critical times for our species and 
 "The loss of wilderness is a truth so sad, so overwhelming that, to reflect reality, it would need to be the subject of every wildlife film. That, of course, would be neither entertaining nor ultimately dramatic. So it seems that as filmmakers we are doomed either to fail our audience or fail our cause."
 Stephen Mills (1997)
 
-
 %---------------------------------------------
 %
 %       METHODS
@@ -171,7 +170,7 @@ All authors approved the final version of the manuscript.
 \section{Competing Interests}
 We have no competing interests.
 \section{Acknowledgments}
-We thank Sir David 
+We thank Sir David and Amy Cooke for emotional support.
 
 \bibliographystyle{vancouver}
 \bibliography{References}
