--- a/References.bib
+++ b/References.bib
@@ -14,3 +14,123 @@
   publisher={Taylor \& Francis}
 }
 
+@article{soriano2017internet,
+  title={Internet-based monitoring of public perception of conservation},
+  author={Soriano-Redondo, Andrea and Bearhop, Stuart and Lock, Leigh and Votier, Stephen C and Hilton, Geoff M},
+  journal={Biological Conservation},
+  volume={206},
+  pages={304--309},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{bagust2008screen,
+  title={‘Screen natures’: Special effects and edutainment in ‘new’hybrid wildlife documentary},
+  author={Bagust, Phil},
+  journal={Continuum: Journal of Media \& Cultural Studies},
+  volume={22},
+  number={2},
+  pages={213--226},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
+@article{richards2013greening,
+  title={Greening wildlife documentary},
+  author={Richards, Morgan},
+  year={2013},
+  publisher={Peter Lang Publishing}
+}
+
+@article{barnosky2011has,
+  title={Has the Earth/'s sixth mass extinction already arrived?},
+  author={Barnosky, Anthony D and Matzke, Nicholas and Tomiya, Susumu and Wogan, Guinevere OU and Swartz, Brian and Quental, Tiago B and Marshall, Charles and McGuire, Jenny L and Lindsey, Emily L and Maguire, Kaitlin C and others},
+  journal={Nature},
+  volume={471},
+  number={7336},
+  pages={51--57},
+  year={2011},
+  publisher={Nature Research}
+}
+
+@article{jeffries2003bbc,
+  title={BBC natural history versus science paradigms},
+  author={Jeffries, Michael},
+  journal={Science as culture},
+  volume={12},
+  number={4},
+  pages={527--545},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+@article{biggs2013legal,
+  title={Legal trade of Africa's rhino horns},
+  author={Biggs, Duan and Courchamp, Franck and Martin, Rowan and Possingham, Hugh P},
+  journal={Science},
+  volume={339},
+  number={6123},
+  pages={1038--1039},
+  year={2013},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{turvey2007first,
+  title={First human-caused extinction of a cetacean species?},
+  author={Turvey, Samuel T and Pitman, Robert L and Taylor, Barbara L and Barlow, Jay and Akamatsu, Tomonari and Barrett, Leigh A and Zhao, Xiujiang and Reeves, Randall R and Stewart, Brent S and Wang, Kexiong and others},
+  journal={Biology letters},
+  volume={3},
+  number={5},
+  pages={537--540},
+  year={2007},
+  publisher={The Royal Society}
+}
+
+@inproceedings{holz2015m,
+  title={I'm just on my phone and they're watching TV: Quantifying mobile device use while watching television},
+  author={Holz, Christian and Bentley, Frank and Church, Karen and Patel, Mitesh},
+  booktitle={Proceedings of the ACM International Conference on Interactive Experiences for TV and Online Video},
+  pages={93--102},
+  year={2015},
+  organization={ACM}
+}
+
+@article{rands2010biodiversity,
+  title={Biodiversity conservation: challenges beyond 2010},
+  author={Rands, Michael RW and Adams, William M and Bennun, Leon and Butchart, Stuart HM and Clements, Andrew and Coomes, David and Entwistle, Abigail and Hodge, Ian and Kapos, Valerie and Scharlemann, J{\"o}rn PW and others},
+  journal={Science},
+  volume={329},
+  number={5997},
+  pages={1298--1303},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
+
+@book{owen2009internet,
+  title={The Internet challenge to television},
+  author={Owen, Bruce M},
+  year={2009},
+  publisher={Harvard University Press}
+}
+
+@article{wunder2013taxing,
+  title={On taxing wildlife films and exposure to nature},
+  author={Wunder, Sven and Sheil, Douglas},
+  journal={Oryx},
+  volume={47},
+  number={04},
+  pages={483--485},
+  year={2013},
+  publisher={Cambridge Univ Press}
+}
+
+@article{janpol2016does,
+  title={Does viewing documentary films affect environmental perceptions and behaviors?},
+  author={Janpol, Henry L and Dilts, Rachel},
+  journal={Applied Environmental Education \& Communication},
+  volume={15},
+  number={1},
+  pages={90--98},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
