--- a/References.bib
+++ b/References.bib
@@ -134,3 +134,47 @@
   year={2016},
   publisher={Taylor \& Francis}
 }
+
+@article{jacobsen2011gore,
+  title={The Al Gore effect: an inconvenient truth and voluntary carbon offsets},
+  author={Jacobsen, Grant D},
+  journal={Journal of Environmental Economics and Management},
+  volume={61},
+  number={1},
+  pages={67--78},
+  year={2011},
+  publisher={Elsevier}
+}
+
+
+@article{hungerford1990changing,
+  title={Changing learner behavior through environmental education},
+  author={Hungerford, Harold R and Volk, Trudi L},
+  journal={The journal of environmental education},
+  volume={21},
+  number={3},
+  pages={8--21},
+  year={1990},
+  publisher={Taylor \& Francis}
+}
+
+@article{kollmuss2002mind,
+  title={Mind the gap: why do people act environmentally and what are the barriers to pro-environmental behavior?},
+  author={Kollmuss, Anja and Agyeman, Julian},
+  journal={Environmental education research},
+  volume={8},
+  number={3},
+  pages={239--260},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{liu2010social,
+  title={Social media tools as a learning resource},
+  author={Liu, Youmei},
+  journal={Journal of Educational Technology Development and Exchange},
+  volume={3},
+  number={1},
+  pages={101--114},
+  year={2010}
+}
